--- a/springboot-shiro/pom.xml
+++ b/springboot-shiro/pom.xml
@@ -15,10 +15,12 @@
 
     <dependencies>
 
-        <!--<dependency>
+        <!-- shiro-spring-boot-web-starter 已引入
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>-->
+        </dependency>
+        -->
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
